refactor to encapsulate record processing independent from determining all the transforms